// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/modal/Modal renders no footer 1`] = `
<div
  class="Modal__Bootstrap modal-dialog modal-lg"
  data-testid="testNoFooter"
>
  <div
    class="modal-content"
  >
    <div
      class="modal-header"
    >
      <button
        aria-label="Close"
        class="close"
        type="button"
      >
        <span
          class="glyphicon glyphicon-remove"
        />
      </button>
      <h4
        class="modal-title"
      >
        Test No Footer
      </h4>
    </div>
    <div
      class="modal-body"
      style="max-height: 55vh; overflow-y: auto;"
    >
      <div>
        No Footer!
      </div>
    </div>
  </div>
</div>
`;

exports[`components/modal/Modal renders open 1`] = `
<div
  class="Modal__Bootstrap modal-dialog modal-lg"
  data-testid="testOpen"
>
  <div
    class="modal-content"
  >
    <div
      class="modal-header"
    >
      <button
        aria-label="Close"
        class="close"
        type="button"
      >
        <span
          class="glyphicon glyphicon-remove"
        />
      </button>
      <h4
        class="modal-title"
      >
        Test Open
      </h4>
    </div>
    <div
      class="modal-body"
      style="max-height: 55vh; overflow-y: auto;"
    >
      <div>
        Hello Open!
      </div>
    </div>
    <div
      class="modal-footer"
    >
      <button
        class="btn btn-primary"
        type="button"
      >
        Is Done
      </button>
    </div>
  </div>
</div>
`;
